--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -137,11 +137,31 @@
     "editable": false
    },
    "source": [
-    "\n",
     "# 👣 Setup steps\n",
     "Here are the steps to setup this lab:\n",
+    "- Create the notebook styles \n",
     "- Create the notebook variables\n",
     "- Create the `db_ybu` database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 👇 Create the notebook styles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "def css_styling():\n",
+    "    styles = open(\"./styles/custom.css\", \"r\").read()\n",
+    "    return HTML(styles)\n",
+    "css_styling()"
    ]
   },
   {
@@ -178,11 +198,6 @@
    "source": [
     "# Env variables for Notebook\n",
     "import os\n",
-    "from IPython.core.display import HTML\n",
-    "def css_styling():\n",
-    "    styles = open(\"./styles/custom.css\", \"r\").read()\n",
-    "    return HTML(styles)\n",
-    "css_styling()\n",
     "\n",
     "# read env_vars.env\n",
     "env_vars = !cat env_vars.env\n",
@@ -249,7 +264,7 @@
     "\n",
     "# Store the note book values for other notebooks to use\n",
     "\n",
-    "%store NB_YB_PATH\n",
+    "%store NB_YB_PATH_BIN\n",
     "%store NB_YB_PATH_DATA\n",
     "%store NB_GITPOD_WORKSPACE_URL\n",
     "\n",
@@ -417,7 +432,7 @@
     "\n",
     "UTIL_YBTSERVER_METRICS_FILE=${UTILS_FOLDER}/${UTIL_YBTSERVER_METRICS_FILE}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "# Metrics file\n",
     "./ysqlsh -d ${DB_NAME} -f ${UTIL_YBTSERVER_METRICS_FILE} >&/dev/null\n",
@@ -460,18 +475,14 @@
     "WORLD_DDL_PATH=${DATA_FOLDER}/${DATA_DDL_FILE}\n",
     "WORLD_DML_PATH=${DATA_FOLDER}/${DATA_DML_FILE}\n",
     "\n",
-    "cd ${YB_PATH}\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "# DDL file\n",
     "./ysqlsh -d ${DB_NAME} -f ${WORLD_DDL_PATH} >&/dev/null\n",
     "sleep 1;\n",
     "\n",
     "# DML file\n",
-    "./ysqlsh -d ${DB_NAME} -f ${WORLD_DML_PATH} >&/dev/null\n",
-    "sleep 1;\n",
-    "\n",
-    "# Describe relations\n",
-    "./ysqlsh -d ${DB_NAME} -c \"\\d public.*\""
+    "./ysqlsh -d ${DB_NAME} -f ${WORLD_DML_PATH} >&/dev/null"
    ]
   },
   {
@@ -482,12 +493,12 @@
     "editable": false
    },
    "source": [
-    "##### View DDL for tbl_countries\n",
-    "Run the following cell using `ysqlsh` to view a table definition.\n",
+    "##### View DDL for tbl_countries, tbl_states, and tbl_cities\n",
+    "Run the following cell using `ysqlsh` to view the table definitions.\n",
     "\n",
     "> Note\n",
     "> \n",
-    "> SQL magic does not support PostgreSQL `psql` commands. In order to execute `psql` commands, the notebook uses bash and `ysqlsh`.\n",
+    "> SQL magic does not support PostgreSQL `psql` meta-commands. In order to execute `psql` meta-commands, the notebook uses bash and `ysqlsh`.\n",
     "\n"
    ]
   },
@@ -502,7 +513,6 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # \\d tbl_countriees\n",
-    "\n",
     "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
@@ -511,7 +521,7 @@
     "\n",
     "./ysqlsh -d ${DB_NAME} -c \"\\d tbl_countries\"\n",
     "./ysqlsh -d ${DB_NAME} -c \"\\d tbl_cities\"\n",
-    "#./ysqlsh -d ${DB_NAME} -c \"\\d tbl_states\"\n"
+    "./ysqlsh -d ${DB_NAME} -c \"\\d tbl_states\"\n"
    ]
   },
   {
