--- a/02_YSQL_Development.ipynb
+++ b/02_YSQL_Development.ipynb
@@ -102,7 +102,9 @@
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
     "%store -r \n",
-    "%config SqlMagic.named_parameters=True"
+    "%config SqlMagic.named_parameters=True\n",
+    "%config SqlMagic.displaylimit=50\n",
+    "%config SqlMagic.displaycon=False"
    ]
   },
   {
@@ -731,12 +733,12 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
     "\n",
     "cd $YB_PATH_BIN\n",
-    "./ysqlsh/  -d ${DB_NAME} -c \"\\d+ idx_demo_val\" -c \"\\d+ tbl_demo\"\n"
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ idx_demo_val\" -c \"\\d+ tbl_demo\"\n"
    ]
   },
   {
@@ -802,6 +804,16 @@
     "#### Step 5: Verify that index is leading to faster query execution using explain analyze\n",
     "\n",
     "When defining an index for a specific access pattern, it is good that the developer verifies that the index is used. The following shows that an “Index Only Scan” was used, without the need for an additional “Sort” operation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets left align query plan styling\n",
+    "css_styling()"
    ]
   },
   {
@@ -976,13 +988,13 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
     "#SQL_CROSSTABVIEW=\"\\crosstabview\"\n",
     "\n",
     "cd $YB_PATH_BIN\n",
-    "echo 'select job, dname, sum(sal) from tbl_employees join tbl_departments using(deptno) group by dname, job  \\crosstabview' | ./ysqlsh/  -d ${DB_NAME}\n"
+    "echo 'select job, dname, sum(sal) from tbl_employees join tbl_departments using(deptno) group by dname, job  \\crosstabview' | ./ysqlsh -d ${DB_NAME}\n"
    ]
   },
   {
@@ -1072,12 +1084,12 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
     "\n",
     "cd $YB_PATH_BIN\n",
-    "./ysqlsh/  -d ${DB_NAME} -c \"\\d+ idx_emp_skills_ybgin\" -c \"\\d+ tbl_employees\"\n"
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ idx_emp_skills_ybgin\" -c \"\\d+ tbl_employees\"\n"
    ]
   },
   {
@@ -1110,9 +1122,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Step 3: Use the Explain plan to verify that index usage\n",
+    "#### Step 3: Use the Explain plan to verify that index usage\n",
     "\n",
     "Thanks to the GIN index, this search doesn’t need to read all documents. The following shows the execution plan being an indexed access path."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets left align query plan styling\n",
+    "css_styling()"
    ]
   },
   {
@@ -1179,12 +1201,12 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
     "\n",
     "cd $YB_PATH_BIN\n",
-    "./ysqlsh/  -d ${DB_NAME} -c \"\\d+ idx_dept_description_ybgin\" -c \"\\d+ tbl_departments\"\n"
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ idx_dept_description_ybgin\" -c \"\\d+ tbl_departments\"\n"
    ]
   },
   {
@@ -1220,6 +1242,16 @@
     "#### Step 3: Explain plan to verify that index is used\n",
     "\n",
     "Thanks to the GIN index, this search doesn’t need to read all rows and text. The following shows the execution plan being an indexed access path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets left align query plan styling\n",
+    "css_styling()"
    ]
   },
   {
@@ -1513,12 +1545,12 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
     "\n",
     "cd $YB_PATH_BIN\n",
-    "./ysqlsh/  -d ${DB_NAME} -c \"\\d+ tbl_departments\"\n"
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_departments\"\n"
    ]
   },
   {
@@ -1666,12 +1698,12 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
     "\n",
     "cd $YB_PATH_BIN\n",
-    "./ysqlsh/  -d ${DB_NAME} -c \"\\d+ mvw_report_sal_per_dept\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ mvw_report_sal_per_dept\""
    ]
   },
   {
@@ -1718,12 +1750,12 @@
    "outputs": [],
    "source": [
     "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
     "\n",
     "cd $YB_PATH_BIN\n",
-    "./ysqlsh/  -d ${DB_NAME} -c \"\\d+ idx_mvw_report_sal_per_dept_sal\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ idx_mvw_report_sal_per_dept_sal\""
    ]
   },
   {
@@ -1788,6 +1820,16 @@
     "#### Step 5: View the query plan\n",
     "\n",
     "The execution plan shows that no additional join or group by are needed when querying this materialized view:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets left align query plan styling\n",
+    "css_styling()"
    ]
   },
   {
