--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -325,6 +325,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets left align query plan styling\n",
+    "css_styling()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -816,6 +826,16 @@
     "Using the same query, you will generate an Explain Plan and the view the metrics.\n",
     "\n",
     "Just like the section before, you will then modify and rerun the query to answer various questions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets left align query plan styling\n",
+    "css_styling()"
    ]
   },
   {
@@ -1360,6 +1380,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets left align query plan styling\n",
+    "css_styling()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1468,6 +1498,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets left align query plan styling\n",
+    "css_styling()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1555,6 +1595,16 @@
    "source": [
     "### q4b | Query with key range in predicate\n",
     "To begin, run the following cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sets left align query plan styling\n",
+    "css_styling()"
    ]
   },
   {
