--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -111,8 +111,10 @@
    "outputs": [],
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
-    "%store -r \n",
-    "%config SqlMagic.named_parameters=True"
+    "%store -r\n",
+    "%config SqlMagic.named_parameters=True\n",
+    "%config SqlMagic.displaylimit=50\n",
+    "%config SqlMagic.displaycon=False"
    ]
   },
   {
