--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -112,9 +112,10 @@
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
     "%store -r\n",
+    "%config SqlMagic.autopandas=True\n",
     "%config SqlMagic.named_parameters=True\n",
     "%config SqlMagic.displaylimit=50\n",
-    "%config SqlMagic.displaycon=False"
+    "%config SqlMagic.displaycon=True"
    ]
   },
   {
@@ -351,7 +352,7 @@
     "\n",
     "\n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (analyze, costs off, verbose, timing on) \n",
+    "explain (analyze, costs off, verbose, dist, timing on) \n",
     "select '' _\n",
     "    , k\n",
     "    , v\n",
@@ -368,28 +369,52 @@
    "metadata": {},
    "source": [
     "##### q1a | Explain Plan (above ^^)\n",
-    "Because YugabyteDB reuses the PostgreSQL query layer, it is possible to view an Explain Plan for a query. The query optimizer generates the Explain Plan for the stated query execution.\n",
-    "The Explain Plan for this query shows:\n",
-    "- `Seq Scan on public.tbl_no_pk (actual time=7.912..11.720 rows=1 loops=1)`\n",
+    "Because YugabyteDB reuses the PostgreSQL query layer, it is possible to view an Explain Plan for a query. YugabyteDB enhances the Explain Plain so that it shows how a query accesses distributed storage.\n",
+    "```\n",
+    "Seq Scan on public.tbl_no_pk (cost=0.00..102.50 rows=1000 width=68) (actual time=3.263..3.289 rows=1 loops=1)\n",
+    "  Output: ''::text, k, v\n",
+    "  Filter: (tbl_no_pk.k = 1000)\n",
+    "  Rows Removed by Filter: 999\n",
+    "  Storage Table Read Requests: 3\n",
+    "  Storage Table Read Execution Time: 3.054 ms\n",
+    "Planning Time: 0.059 ms\n",
+    "Execution Time: 3.337 ms\n",
+    "Storage Read Requests: 3\n",
+    "Storage Read Execution Time: 3.054 ms\n",
+    "Storage Write Requests: 0\n",
+    "Catalog Read Requests: 1\n",
+    "Catalog Read Execution Time: 0.778 ms\n",
+    "Catalog Write Requests: 0\n",
+    "Storage Flush Requests: 0\n",
+    "Storage Execution Time: 3.832 ms\n",
+    "Peak Memory Usage: 14 kB\n",
+    "```\n",
+    "This query performs a Sequence Scan to read 1000 rows - all the rows in the table - and then filters out 999 of them to find the 1 row in the predicate.\n",
     "\n",
-    "A `Seq Scan` is a full table scan, meaning that potentially all the rows in the table will be read.\n",
+    "The Seq Scan access makes 3 read requests. These are read requests into the tablets for this table. \n",
     "\n",
-    "- `Rows Removed by Filter: 999`\n",
+    "To overall query metrics are: Planning Time, Execution Time, Storage Read Requests,  Storage Read Execution Time, Storage Write Requests, Catalog Read Requests,  Catalog Read Execution Time, Catalog Write Requests, Storage Flush Requests, Storage Execution Time, and Peak Memory Usage.\n",
     "\n",
-    "999 rows were removed, leaving the final single row.\n",
-    "\n",
-    "The Explain Plan infers how the query accesses tablet data, but does **NOT** show the metrics for tablet access. Using a custom utility, you can view the metrics for the query execution in the notebook cell below. To view the metrics, run the following cell that contains the prepared statement:"
+    "Using a custom utility, you can view the metrics for the query execution in the notebook cell below. This will dive into how the operations of the Storage Read Requests. To view the metrics, run the following cell that contains the prepared statement:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%sql` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "%%sql /* metrics */\n",
     "execute stmt_util_metrics_snap_table;"
@@ -442,18 +467,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%config SqlMagic.autopandas=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#%% python, but prepared statements as sql magic\n",
+    "\n",
     "THIS_TABLE_NAME = 'tbl_no_pk'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
     "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
     "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
-    "print (view_gitpod_url)\n",
+    "print(view_gitpod_url.to_string())\n",
     "\n",
     "## Uncomment if local\n",
     "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
     "# print (view_local_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config SqlMagic.autopandas=False"
    ]
   },
   {
@@ -656,6 +700,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%config SqlMagic.autopandas=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#%% python, but prepared statements as sql magic\n",
     "THIS_TABLE_NAME = 'tbl_pk_hash'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
@@ -668,6 +721,15 @@
     "## Uncomment if local\n",
     "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
     "# print (view_local_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config SqlMagic.autopandas=False"
    ]
   },
   {
@@ -843,6 +905,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config SqlMagic.autopandas=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -852,7 +923,7 @@
    "source": [
     "%%sql /* explain plan */\n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (costs off, analyze, verbose) \n",
+    "explain (analyze, costs off, verbose, dist, timing on) \n",
     "select '' as _\n",
     "  , k\n",
     " -- , v\n",
@@ -1189,8 +1260,7 @@
     "ls  ${TABLE_ID_PATH}\n",
     "\n",
     "./sst_dump --command=scan --file=${TABLET_ID_PATH} --output_format=decoded_regulardb \n",
-    "#./sst_dump --command=scan --file=${TABLET_ID_PATH} --output_format=decoded_intentsdb\n",
-    "\n"
+    "#./sst_dump --command=scan --file=${TABLET_ID_PATH} --output_format=decoded_intentsdb"
    ]
   },
   {
@@ -1276,6 +1346,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%config SqlMagic.autopandas=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#%% python, but prepared statements as sql magic\n",
     "THIS_TABLE_NAME = 'tbl_pk_range'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
@@ -1288,6 +1367,15 @@
     "## Uncomment if local\n",
     "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
     "# print (view_local_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config SqlMagic.autopandas=False"
    ]
   },
   {
@@ -1387,6 +1475,15 @@
    "source": [
     "# Sets left align query plan styling\n",
     "css_styling()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config SqlMagic.autopandas=False"
    ]
   },
   {
@@ -1510,6 +1607,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config SqlMagic.autopandas=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1519,7 +1625,7 @@
    "source": [
     "%%sql /* explain plan */\n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (costs off, analyze, verbose) \n",
+    "explain (analyze, costs off, verbose, dist, timing on) \n",
     "select '' as _\n",
     "  , k\n",
     "from tbl_pk_hash\n",
@@ -1612,6 +1718,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%config SqlMagic.autopandas=False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1621,7 +1736,7 @@
    "source": [
     "%%sql /* explain plan */\n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (costs off, analyze, verbose) \n",
+    "explain (analyze, costs off, verbose, dist, timing on) \n",
     "select '' as _\n",
     "  , k\n",
     "from tbl_pk_hash\n",
@@ -1753,7 +1868,7 @@
    "metadata": {},
    "source": [
     "## 😊 Next up!\n",
-    "Continue your learning by opening the next notebook, `04_AnatoNB_of_an_Index.ipynb`. \n",
+    "Continue your learning by opening the next notebook, `04_Anatomy_of_an_Index.ipynb`. \n",
     "\n",
     "Or, to open the notebook from GitPod, run the following:"
    ]
@@ -1769,7 +1884,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "gp open `04_AnatoNB_of_an_Index.ipynb`"
+    "gp open `04_Anatomy_of_an_Index.ipynb`"
    ]
   }
  ],
