--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -278,7 +278,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* create table no PK and insert rows */\n",
+    "%%sql \n",
     "drop table if exists tbl_no_pk;\n",
     "\n",
     "create table if not exists tbl_no_pk (k int, v text);\n",
@@ -345,7 +345,8 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* explain plan */\n",
+    "%%sql\n",
+    "\n",
     "-- beta feature enabled by default, so turning off\n",
     "SET yb_enable_expression_pushdown=off;\n",
     "SHOW yb_enable_expression_pushdown;\n",
@@ -400,23 +401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Cell magic `%%sql` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%sql /* metrics */\n",
+    "%%sql \n",
     "execute stmt_util_metrics_snap_table;"
    ]
   },
@@ -649,8 +642,8 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* alter table rename AND add PK */\n",
-    "\n",
+    "%%sql \n",
+    "/* alter table rename AND add PK */\n",
     "drop table if exists tbl_pk_hash;\n",
     "-- rename table\n",
     "alter table if exists tbl_no_pk rename to tbl_pk_hash;\n",
@@ -829,7 +822,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* query with hash buckets */\n",
+    "%%sql \n",
     "select '' as _\n",
     "  , k\n",
     " -- , v\n",
@@ -921,7 +914,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* explain plan */\n",
+    "%%sql\n",
     "execute stmt_util_metrics_snap_reset;\n",
     "explain (analyze, costs off, verbose, dist, timing on) \n",
     "select '' as _\n",
@@ -1042,7 +1035,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* drop and create table with PK = partition key and clustering key */\n",
+    "%%sql\n",
     "\n",
     "drop table if exists tbl_pk_hash_ck_asc;\n",
     "\n",
@@ -1321,7 +1314,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql  /* create table no PK and insert rows */\n",
+    "%%sql\n",
     "drop table if exists tbl_pk_range;\n",
     "\n",
     "create table if not exists tbl_pk_range (k int, v text, primary key (k asc)) ;\n",
@@ -1445,7 +1438,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* query */\n",
+    "%%sql \n",
     "select '' as _\n",
     "  , k\n",
     "from tbl_pk_range\n",
@@ -1496,7 +1489,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* explain plan */\n",
+    "%%sql \n",
     "execute stmt_util_metrics_snap_reset;\n",
     "explain (costs off, analyze, verbose) \n",
     "select '' as _\n",
@@ -1623,7 +1616,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* explain plan */\n",
+    "%%sql \n",
     "execute stmt_util_metrics_snap_reset;\n",
     "explain (analyze, costs off, verbose, dist, timing on) \n",
     "select '' as _\n",
@@ -1734,7 +1727,7 @@
    },
    "outputs": [],
    "source": [
-    "%%sql /* explain plan */\n",
+    "%%sql \n",
     "execute stmt_util_metrics_snap_reset;\n",
     "explain (analyze, costs off, verbose, dist, timing on) \n",
     "select '' as _\n",
