see if ipython-sql accepts hints

--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -112,10 +112,10 @@
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
     "%store -r\n",
-    "%config SqlMagic.autopandas=True\n",
-    "%config SqlMagic.named_parameters=True\n",
-    "%config SqlMagic.displaylimit=50\n",
-    "%config SqlMagic.displaycon=True"
+    "%config SqlMagic.autopandas=False\n",
+    "# %config SqlMagic.named_parameters=True\n",
+    "%config SqlMagic.displaylimit=30\n",
+    "%config SqlMagic.displaycon=False"
    ]
   },
   {
@@ -353,7 +353,7 @@
     "\n",
     "\n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (analyze, costs off, verbose, dist, timing on) \n",
+    "explain (analyze, dist) \n",
     "select '' _\n",
     "    , k\n",
     "    , v\n",
@@ -460,37 +460,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%config SqlMagic.autopandas=True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "\n",
     "THIS_TABLE_NAME = 'tbl_no_pk'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
     "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
-    "print(view_gitpod_url.to_string())\n",
+    "view_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_url\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
-    "# print (view_local_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%config SqlMagic.autopandas=False"
+    "# view_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_url\n",
+    "\n",
+    "# get for ResultSet dict the key value as a string\n",
+    "s = str(view_url.dict().get('view_url'))\n",
+    "url = s.replace(\"('\", \"\").replace(\"',)\", \"\")\n",
+    "print(url)"
    ]
   },
   {
@@ -693,36 +677,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%config SqlMagic.autopandas=True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "THIS_TABLE_NAME = 'tbl_pk_hash'\n",
+    "THIS_TABLE_NAME = 'tbl_no_pk'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
     "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
-    "print (view_gitpod_url)\n",
+    "view_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_url\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
-    "# print (view_local_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%config SqlMagic.autopandas=False"
+    "# view_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_url\n",
+    "\n",
+    "# get for ResultSet dict the key value as a string\n",
+    "s = str(view_url.dict().get('view_url'))\n",
+    "url = s.replace(\"('\", \"\").replace(\"',)\", \"\")\n",
+    "print(url)"
    ]
   },
   {
@@ -898,15 +867,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%config SqlMagic.autopandas=False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -916,7 +876,7 @@
    "source": [
     "%%sql\n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (analyze, costs off, verbose, dist, timing on) \n",
+    "explain (analyze, dist) \n",
     "select '' as _\n",
     "  , k\n",
     " -- , v\n",
@@ -1264,6 +1224,8 @@
     "You can go back to the beginning of **What's on disk?**.\n",
     "\n",
     "Then, alter the Primary Key definition and run through the SST dump again. \n",
+    "- `primary key (k hash, v1 asc)`\n",
+    "- `primary key (k hash, v1 asc, v2 asc)`\n",
     "\n",
     "What differences do you see in the `SubDocKey`?"
    ]
@@ -1339,36 +1301,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%config SqlMagic.autopandas=True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#%% python, but prepared statements as sql magic\n",
     "THIS_TABLE_NAME = 'tbl_pk_range'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
     "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
-    "print (view_gitpod_url)\n",
+    "view_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_url\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
-    "# print (view_local_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%config SqlMagic.autopandas=False"
+    "# view_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_url\n",
+    "\n",
+    "# get for ResultSet dict the key value as a string\n",
+    "s = str(view_url.dict().get('view_url'))\n",
+    "url = s.replace(\"('\", \"\").replace(\"',)\", \"\")\n",
+    "print(url)"
    ]
   },
   {
@@ -1473,15 +1420,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%config SqlMagic.autopandas=False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1491,7 +1429,7 @@
    "source": [
     "%%sql \n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (costs off, analyze, verbose) \n",
+    "explain (analyze, dist) \n",
     "select '' as _\n",
     "  , k\n",
     "from tbl_pk_range\n",
@@ -1600,15 +1538,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%config SqlMagic.autopandas=False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1618,7 +1547,7 @@
    "source": [
     "%%sql \n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (analyze, costs off, verbose, dist, timing on) \n",
+    "explain (analyze, dist) \n",
     "select '' as _\n",
     "  , k\n",
     "from tbl_pk_hash\n",
@@ -1711,15 +1640,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%config SqlMagic.autopandas=False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -1729,7 +1649,7 @@
    "source": [
     "%%sql \n",
     "execute stmt_util_metrics_snap_reset;\n",
-    "explain (analyze, costs off, verbose, dist, timing on) \n",
+    "explain (analyze, dist) \n",
     "select '' as _\n",
     "  , k\n",
     "from tbl_pk_hash\n",
@@ -1871,13 +1791,13 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "sql"
+     "languageId": "shellscript"
     }
    },
    "outputs": [],
    "source": [
     "%%bash\n",
-    "gp open `04_Anatomy_of_an_Index.ipynb`"
+    "gp open '04_Anatomy_of_an_Index.ipynb'"
    ]
   }
  ],
