--- a/05_Using_GIN_Indexes.ipynb
+++ b/05_Using_GIN_Indexes.ipynb
@@ -152,7 +152,10 @@
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
     "%store -r \n",
-    "%config SqlMagic.named_parameters=True"
+    "%config SqlMagic.autopandas=False\n",
+    "# %config SqlMagic.named_parameters=True\n",
+    "%config SqlMagic.displaylimit=30\n",
+    "%config SqlMagic.displaycon=False"
    ]
   },
   {
