--- a/02_YSQL_Development.ipynb
+++ b/02_YSQL_Development.ipynb
@@ -102,8 +102,9 @@
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
     "%store -r\n",
-    "%config SqlMagic.named_parameters=True\n",
-    "%config SqlMagic.displaylimit=50\n",
+    "%config SqlMagic.autopandas=False\n",
+    "# %config SqlMagic.named_parameters=True\n",
+    "%config SqlMagic.displaylimit=30\n",
     "%config SqlMagic.displaycon=False"
    ]
   },
