remove jupysql and revert to ipython-sql

--- a/04_Anatomy_of_an_Index.ipynb
+++ b/04_Anatomy_of_an_Index.ipynb
@@ -189,7 +189,7 @@
     "%reload_ext sql\n",
     "\n",
     "# SQL magic for python connection string\n",
-    "%sql engine"
+    "%sql {connection_str}"
    ]
   },
   {
@@ -1468,7 +1468,6 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "%%sql\n",
     "SET yb_enable_expression_pushdown=on;\n",
     "SHOW yb_enable_expression_pushdown;\n",
     "\n",
@@ -2010,7 +2009,22 @@
     "- IndexOnlyScan(table): Enable IndexOnlyScan on the table.\n",
     "- NoIndexOnlyScan(table): Do not enable IndexOnlyScan on the table.\n",
     "- IndexScanRegexp(table regex): Enable index scan on the table whose indices match with the regular expression defined by regex.\n",
-    "- IndexOnlyScanRegexp(table regex): Do not enable index scan on the table whose indices match with the regular expression defined by regex"
+    "- IndexOnlyScanRegexp(table regex): Do not enable index scan on the table whose indices match with the regular expression defined by regex\n",
+    "\n",
+    "Hints for join methods\n",
+    "Join method hints enforce the join methods for SQL statements. Using pg_hint_plan, you can specify the methodology by which tables should be joined.\n",
+    "\n",
+    "- `HashJoin(t1 t2 t3 ...)`:\tJoin t1, t2, and t3 using HashJoin.\n",
+    "- `NoHashJoin(t1 t2 t3 ...)`:\tDo not join t1, t2, and t3 using HashJoin.\n",
+    "- `NestLoop(t1 t2 t3 ...)`:\tJoin t1, t2, and t3 using NestLoop join.\n",
+    "- `NoNestLoop(t1 t2 t3 ...)`:\tDo not join t1, t2, and t3 using NestLoop join."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://docs.yugabyte.com/stable/explore/query-1-performance/pg-hint-plan/"
    ]
   },
   {
