--- a/05_Using_GIN_Indexes.ipynb
+++ b/05_Using_GIN_Indexes.ipynb
@@ -226,7 +226,7 @@
     "%reload_ext sql\n",
     "\n",
     "# SQL magic for python connection string\n",
-    "%sql engine"
+    "%sql {connection_str}"
    ]
   },
   {
