--- a/06_YSQL_Development_Advanced.ipynb
+++ b/06_YSQL_Development_Advanced.ipynb
@@ -96,7 +96,10 @@
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
     "%store -r \n",
-    "%config SqlMagic.named_parameters=True"
+    "%config SqlMagic.autopandas=False\n",
+    "# %config SqlMagic.named_parameters=True\n",
+    "%config SqlMagic.displaylimit=30\n",
+    "%config SqlMagic.displaycon=False"
    ]
   },
   {
@@ -175,7 +178,7 @@
     "%reload_ext sql\n",
     "\n",
     "# SQL magic for python connection string\n",
-    "%sql engine"
+    "%sql {connection_str}"
    ]
   },
   {
