--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -579,7 +579,7 @@
    "source": [
     "%reload_ext sql \n",
     "# creates connection for sql magic\n",
-    "%sql engine"
+    "%sql {connection_str}"
    ]
   },
   {
